--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -37,7 +37,7 @@
         <tabset class="member-tabset">
           <tab heading="About {{user.knownAs}}">
             <h4>Description</h4>
-            <p>{{user.introduction}}</p>
+            <p>{{user.Introducation}}</p>
             <h4>Looking For</h4>
             <p>{{user.lookingFor}}</p>
           </tab>
