--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,6 +17,9 @@
     </li>
   </ul>
   <div dropdown class="dropdown" *ngIf="loggedIn()">
+    <span class="mr-1">
+      <img src="{{photoUrl}}" alt="">
+    </span>
     <a class="dropdown-toggle text-light" dropdownToggle>
       Welcome {{authService.decodedToken?.unique_name | titlecase}} !
     </a>
